--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <title>Angular Crud </title>
     <link rel="stylesheet" href="css/bootswatch.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <!-- Optional theme 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
--->
 </head>
 
-<body>
+<body ng-app="crudController">
     <div class="container">
+    <div ng-controller="crudController">
         <hr>
 
         <button type="button" class="btn btn-primary btn-medium pull-right" data-toggle="modal" data-target="#addUserModal"> New User</button>
         <h2>Angular Crud </h2>
         <span class="clearfix"></span>
-
         <hr>
 
         <table class="table table-striped">
@@ -30,19 +27,11 @@
                     <th>Configuration</th>
                 </tr>
             </thead>
-            <!--tfoot>
-                <tr>
-                    <th>[Title]</th>
-                    <th>[Title]</th>
-                    <th>[Title]</th>
-                </tr>
-            </tfoot-->
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Giorgio</td>
-                    <td>giogio.26@gmail.com</td>
-
+                <tr ng-repeat="user in users">
+                    <td>{{ $id + 1}}</td>
+                    <td>{{ user.username}} {{ user.fullname }}</td>
+                    <td>{{ user.email }}</td>
                     <!-- Option User -->
                     <td>
                         <div class="btn-group open">
@@ -59,139 +48,142 @@
                         </div>
                     </td>
                     <!-- //End Option Users-->
-
                 </tr>
             </tbody>
         </table>
 
-    </div>
 
 
-
-
-
-    <!-- Modal New User -->
-    <div class="modal fade" id="addUserModal" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">New User
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <div class="input-group margin-bottom-sm">
-                                <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                                <input class="form-control" type="text" placeholder="Enter User Name">
+        <!-- Modal New User -->
+        <div class="modal fade" id="addUserModal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">New User
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <div class="input-group margin-bottom-sm">
+                                    <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+                                    <input class="form-control" type="text" placeholder="Enter User Name">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group margin-bottom-sm">
-                                <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                                <input class="form-control" type="text" placeholder="Enter Full Name">
+                            <div class="form-group">
+                                <div class="input-group margin-bottom-sm">
+                                    <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+                                    <input class="form-control" type="text" placeholder="Enter Full Name">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group margin-bottom-sm">
-                                <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-                                <input class="form-control" type="email" required placeholder="Email address">
+                            <div class="form-group">
+                                <div class="input-group margin-bottom-sm">
+                                    <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+                                    <input class="form-control" type="email" required placeholder="Email address">
+                                </div>
                             </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-success"><i class="fa fa-save" aria-hidden="true"></i> Save</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-sign-out" aria-hidden="true"></i> Close</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success"><i class="fa fa-save" aria-hidden="true"></i> Save</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-sign-out" aria-hidden="true"></i> Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- // End Modal New User-->
+        <!-- // End Modal New User-->
 
 
 
-    <!-- Modal EDIT User -->
-    <div class="modal fade" id="EditUserModal" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Edit User
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <div class="input-group margin-bottom-sm">
-                                <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                                <input class="form-control" type="text" placeholder="Enter User Name">
+        <!-- Modal EDIT User -->
+        <div class="modal fade" id="EditUserModal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Edit User
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <div class="input-group margin-bottom-sm">
+                                    <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+                                    <input class="form-control" type="text" placeholder="Enter User Name">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group margin-bottom-sm">
-                                <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                                <input class="form-control" type="text" placeholder="Enter Full Name">
+                            <div class="form-group">
+                                <div class="input-group margin-bottom-sm">
+                                    <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+                                    <input class="form-control" type="text" placeholder="Enter Full Name">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group margin-bottom-sm">
-                                <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-                                <input class="form-control" type="email" required placeholder="Email address">
+                            <div class="form-group">
+                                <div class="input-group margin-bottom-sm">
+                                    <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+                                    <input class="form-control" type="email" required placeholder="Email address">
+                                </div>
                             </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-warning "><i class="fa fa-save" aria-hidden="true"></i> Edit</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-sign-out" aria-hidden="true"></i> Close</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-warning "><i class="fa fa-save" aria-hidden="true"></i> Edit</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-sign-out" aria-hidden="true"></i> Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- // End Modal EDIT User-->
+        <!-- // End Modal EDIT User-->
 
 
+        <!-- Modal DELETE User -->
+        <div class="modal fade" id="DeleteUserModal" role="dialog">
+            <div class="modal-dialog">
 
-    <!-- Modal DELETE User -->
-    <div class="modal fade" id="DeleteUserModal" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Are you sure?</h4>
-                </div>
-                <div class="modal-body">
-                    <!--Formulario New User-->
-                    <form class="form-horizontal">
-                        <div class="form-group text-center">
-                            <div class="col-sm-12">
-                                <p class="text-danger">You are going to delete ... </p>
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Are you sure?</h4>
+                    </div>
+                    <div class="modal-body">
+                        <!--Formulario New User-->
+                        <form class="form-horizontal">
+                            <div class="form-group text-center">
+                                <div class="col-sm-12">
+                                    <p class="text-danger">You are going to delete ... </p>
+                                </div>
                             </div>
-                        </div>
-                    </form>
-                    <!-- // End Formulario -->
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-danger"><i class="fa fa-trash-o fa-fw"></i>Yes</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-sign-out" aria-hidden="true"></i>No</button>
+                        </form>
+                        <!-- // End Formulario -->
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-danger"><i class="fa fa-trash-o fa-fw"></i>Yes</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-sign-out" aria-hidden="true"></i>No</button>
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- // End Modal DELETE User-->
+
     </div>
-    <!-- // End Modal DELETE User-->
+    <!-- // End Controller -->
+
+    </div>
+    <!-- //End Container-->
+
+    <!-- AngularJS-->
+    <script src="js/angular.js"></script>
+    <script src="js/app.js"></script>
 
 
 
-    <!-- Bootstrap JS-->
+    <!-- BootstrapJS-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <!-- // End Bootstrap JS-->
 </body>
 
 </html>
